# iderp2

./: .gitignore  DEPLOYMENT_CHECKLIST.md  LICENSE  MANIFEST.in  MANIFEST.in.py  README.md  __init__.py  check_iderp_env.sh  hooks.py  hooks.py.old.py  info-id.md  info-id.txt  modules.txt  pyproject.toml  requirements.txt  setup.py
config/: desktop.py
iderp/: __init__.py  copy_fields.py  customer_group_minimums_fix.py  customer_group_pricing.py  dashboard.py  ecommerce.py  emergency_disable.py  field_diagnostics.py  global_minimums.py  hooks.py  install.py  install.py.old  maintenance.py  manual_setup.py  optional_pricing.py  overrides.py  patches.txt  pricing.py  pricing_utils.py  pricing_utils_fix.py  reports.py  server_side_minimums.py  setup_commands.py  universal_pricing.py  universal_setup_fix.py
iderp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
iderp/api/: __init__.py  item.py  machine.py  optional.py  production.py
iderp/doctype/: __init__.py
iderp/doctype/customer_group_minimum/: __init__.py  (+2 more)
iderp/fixtures/: custom_field.json
iderp/iderp/: __init__.py
iderp/translations/: it.csv
iderp/utils/: calcoli.py
iderp_module/: __init__.py  copy_fields.py  customer_group_minimums_fix.py  customer_group_pricing.py  global_minimums.py  hooks.py  install.py  manual_setup.py  optional_pricing.py  overrides.py  pricing_utils_fix.py  reports.py  server_side_minimums.py  setup_commands.py  universal_setup_fix.py
iderp_module/doctype/: __init__.py
iderp_module/fixtures/: custom_field.json
iderp_module/translations/: it.csv
tests/: test_basic.py
(+58 files in other folders)
